# libsandbox

./: CMakeLists.txt  README.md  hashmap.c  hashmap.h  hfs.c  hfs.h  hooks.c  hooks.h  hproc.c  hproc.h  library.c  library.h  libsbox.c  libsbox.vcxproj  ntdll.c  ntdll.h  utils_fs.c  utils_fs.h  utils_general.c  utils_general.h  utils_str.c  utils_str.h
